// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Info Bar Disruptive 1`] = `
<div
  className="info-bar my-info-bar-class disruptive"
  role="presentation"
  style={Object {}}
>
  <span
    aria-hidden={false}
    className="icon icon-wrapper"
    role="presentation"
  >
    <svg
      role="presentation"
      style={
        Object {
          "height": "20px",
          "width": "20px",
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M13,9H11V7H13M13,17H11V11H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
        style={
          Object {
            "fill": "currentColor",
          }
        }
      />
    </svg>
  </span>
  <div
    className="message body2"
  >
    Body2 is used inside here.
  </div>
  <button
    aria-disabled={false}
    aria-label="Action"
    className="my-action-btn-class button button-system-ui button-medium pill-shape"
    data-test-id="my-action-btn-test-id"
    defaultChecked={false}
    disabled={false}
    id="myActionButton"
  >
    <span
      className="button-text-medium"
    >
      Action
    </span>
  </button>
  <button
    aria-disabled={false}
    aria-label="Close"
    className="my-close-btn-class button button-system-ui button-medium pill-shape icon-left"
    data-test-id="my-close-btn-test-id"
    defaultChecked={false}
    disabled={false}
    id="myCloseButton"
  >
    <span
      aria-hidden={false}
      className="icon icon-wrapper"
      role="presentation"
    >
      <svg
        role="presentation"
        style={
          Object {
            "height": "20px",
            "width": "20px",
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
          style={
            Object {
              "fill": "currentColor",
            }
          }
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Storyshots Info Bar Neutral 1`] = `
<div
  className="info-bar my-info-bar-class neutral"
  role="presentation"
  style={Object {}}
>
  <span
    aria-hidden={false}
    className="icon icon-wrapper"
    role="presentation"
  >
    <svg
      role="presentation"
      style={
        Object {
          "height": "20px",
          "width": "20px",
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M13,9H11V7H13M13,17H11V11H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
        style={
          Object {
            "fill": "currentColor",
          }
        }
      />
    </svg>
  </span>
  <div
    className="message body2"
  >
    Body2 is used inside here.
  </div>
  <button
    aria-disabled={false}
    aria-label="Action"
    className="my-action-btn-class button button-system-ui button-medium pill-shape"
    data-test-id="my-action-btn-test-id"
    defaultChecked={false}
    disabled={false}
    id="myActionButton"
  >
    <span
      className="button-text-medium"
    >
      Action
    </span>
  </button>
  <button
    aria-disabled={false}
    aria-label="Close"
    className="my-close-btn-class button button-system-ui button-medium pill-shape icon-left"
    data-test-id="my-close-btn-test-id"
    defaultChecked={false}
    disabled={false}
    id="myCloseButton"
  >
    <span
      aria-hidden={false}
      className="icon icon-wrapper"
      role="presentation"
    >
      <svg
        role="presentation"
        style={
          Object {
            "height": "20px",
            "width": "20px",
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
          style={
            Object {
              "fill": "currentColor",
            }
          }
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Storyshots Info Bar Positive 1`] = `
<div
  className="info-bar my-info-bar-class positive"
  role="presentation"
  style={Object {}}
>
  <span
    aria-hidden={false}
    className="icon icon-wrapper"
    role="presentation"
  >
    <svg
      role="presentation"
      style={
        Object {
          "height": "20px",
          "width": "20px",
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
        style={
          Object {
            "fill": "currentColor",
          }
        }
      />
    </svg>
  </span>
  <div
    className="message body2"
  >
    Body2 is used inside here.
  </div>
  <button
    aria-disabled={false}
    aria-label="Action"
    className="my-action-btn-class button button-system-ui button-medium pill-shape"
    data-test-id="my-action-btn-test-id"
    defaultChecked={false}
    disabled={false}
    id="myActionButton"
  >
    <span
      className="button-text-medium"
    >
      Action
    </span>
  </button>
  <button
    aria-disabled={false}
    aria-label="Close"
    className="my-close-btn-class button button-system-ui button-medium pill-shape icon-left"
    data-test-id="my-close-btn-test-id"
    defaultChecked={false}
    disabled={false}
    id="myCloseButton"
  >
    <span
      aria-hidden={false}
      className="icon icon-wrapper"
      role="presentation"
    >
      <svg
        role="presentation"
        style={
          Object {
            "height": "20px",
            "width": "20px",
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
          style={
            Object {
              "fill": "currentColor",
            }
          }
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Storyshots Info Bar Warning 1`] = `
<div
  className="info-bar my-info-bar-class warning"
  role="presentation"
  style={Object {}}
>
  <span
    aria-hidden={false}
    className="icon icon-wrapper"
    role="presentation"
  >
    <svg
      role="presentation"
      style={
        Object {
          "height": "20px",
          "width": "20px",
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M13,13H11V7H13M13,17H11V15H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
        style={
          Object {
            "fill": "currentColor",
          }
        }
      />
    </svg>
  </span>
  <div
    className="message body2"
  >
    Body2 is used inside here.
  </div>
  <button
    aria-disabled={false}
    aria-label="Action"
    className="my-action-btn-class button button-system-ui button-medium pill-shape"
    data-test-id="my-action-btn-test-id"
    defaultChecked={false}
    disabled={false}
    id="myActionButton"
  >
    <span
      className="button-text-medium"
    >
      Action
    </span>
  </button>
  <button
    aria-disabled={false}
    aria-label="Close"
    className="my-close-btn-class button button-system-ui button-medium pill-shape icon-left"
    data-test-id="my-close-btn-test-id"
    defaultChecked={false}
    disabled={false}
    id="myCloseButton"
  >
    <span
      aria-hidden={false}
      className="icon icon-wrapper"
      role="presentation"
    >
      <svg
        role="presentation"
        style={
          Object {
            "height": "20px",
            "width": "20px",
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
          style={
            Object {
              "fill": "currentColor",
            }
          }
        />
      </svg>
    </span>
  </button>
</div>
`;
